--- a/txt/6-implemented-libraries.tex
+++ b/txt/6-implemented-libraries.tex
@@ -8,10 +8,10 @@
 
 This chapter describes the libraries that were developed in the scope of this thesis.
 They are available in the programming languages Typescript, Python and Go.
-This ensures that different software components in different environments can handle logs as specified by the protocol.
+This ensures that software components in different environments can handle logs as specified by the protocol.
 Details about this practical realization of the libraries can be found in section \ref{sec:implemented-libraries}.
 Moreover, the chosen approach heavily influences the existing toolchain.
-The existing source code of the toolchain was therefore refactored and adjusted to handle E2EE logs.
+The existing source code of the toolchain was therefore refactored and adjusted to handle encrypted logs.
 This is described in section \ref{sec:toolchain-modifications}.
 
 \section{Implemented Libraries}
@@ -30,6 +30,7 @@ The acronym \emph{it-crypto} stands for inverse transparency cryptography.
     Py-it-crypto & Python               & \href{https://github.com/haggj/py-it-crypto}{haggj/py-it-crypto} & \href{https://pypi.org/project/py-it-crypto/}{PyPI}          \\ \hline
     Go-it-crypto & Go                   & \href{https://github.com/haggj/go-it-crypto}{haggj/go-it-crypto} & \href{https://pkg.go.dev/github.com/haggj/go-it-crypto}{PKG} \\ \hline
     \end{tabular}
+    \caption[Overview implemented libraries]{Overview and links of the implemented libraries to handle encrypted logs.}
 \end{table}
 
 All three libraries are fully tested and compatible with each other.
@@ -75,7 +76,7 @@ If a user is logged in the \verb|ItCrypto| object becomes fully functional.
 The logged-in user can create, encrypt and decrypt logs using the provided keys.
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
-\begin{lstlisting}[basicstyle=\small, label=lst:pseudocode,float,floatplacement=tbp, language=Java, caption={Pseudocode of creating, encrypting and decrypting logs using the provided libraries.}, morekeywords={RemoteUser, var, assert}, commentstyle=\color{codegreen}]
+\begin{lstlisting}[basicstyle=\small, label=lst:pseudocode,float,floatplacement=tbp, language=Java, caption={[Pseudocode library usage]Pseudocode of creating, encrypting and decrypting logs using the provided libraries.}, morekeywords={RemoteUser, var, assert}, commentstyle=\color{codegreen}]
 RemoteUser fetchUser(string identity){
     /*
     Fetch keys from the server and check if user 
@@ -116,27 +117,31 @@ It aims to provide documentation for developers who integrate the library into t
 In particular, the methods \verb|signLog|, \verb|encryptLog| and \verb|decryptLog| are detailed.
 As described in chapter~\ref{chap:design}, those methods can be used to provide the full functionality of the intended protocol.
 
-\begin{enumerate}
-    \item
-    The method \verb|signLog| cryptographically signs the given log data.
-    Monitors must call this encryption function to initially sign an instantiated log.
-    The protocol does not allow any raw logs in the system.
-    Rather, all logs must be signed by the monitor that created the log. 
-    This method relies on the private signing key of the logged-in user.\\\\
+The method \verb|signLog| cryptographically signs the given log data.
+Monitors must call this encryption function to initially sign an instantiated log.
+The protocol does not allow any raw logs in the system.
+Rather, all logs must be signed by the monitor that created the log. 
+This method relies on the private signing key of the logged-in user.
+\begin{table}[ht]
+    \centering
     \begin{tabular}{|p{3cm}p{10cm}|}
         \hline
         \multicolumn{2}{|l|}{Input parameters}    \\ \hline
         \verb|accessData|              & This is a data structure containing the raw log data. In particular, this raw data must be encodable as JSON data. It contains all relevant information to log the observed data access.           \\ \hline
         \multicolumn{2}{|l|}{Output}   \\ \hline
         \multicolumn{2}{|p{13cm}|}{The method returns a \emph{JWS} token encoded as string. It is signed by the logged-in user and it contains the JSON-encoded accessLog as payload.} \\ \hline
-    \end{tabular} \\
-    \item
-    The method \verb|encryptLog| encrypts a given log for a given set of recipients.
-    Monitors must call this function to initially encrypt the log for the data owner.
-    It is crucial to the security of the protocol that the monitor only chooses the data owner as a recipient. 
-    This encryption function can be used to share or revoke access to the log.
-    In this case, it must be called by the data owner of the particular log. 
-    This method relies on the private signing key of the logged-in user.\\\\
+    \end{tabular} 
+    \caption[Signature of signLog]{Input parameters and output of the signLog method.}
+\end{table}
+
+The method \verb|encryptLog| encrypts a given log for a given set of recipients.
+Monitors must call this function to initially encrypt the log for the data owner.
+It is crucial to the security of the protocol that the monitor only chooses the data owner as a recipient. 
+This encryption function can be used to share or revoke access to the log.
+In this case, it must be called by the data owner of the particular log. 
+This method relies on the private signing key of the logged-in user.
+\begin{table}[ht]
+    \centering
     \begin{tabular}{|p{3cm}p{10cm}|}
         \hline
         \multicolumn{2}{|l|}{Input parameters}    \\ \hline
@@ -144,32 +149,37 @@ As described in chapter~\ref{chap:design}, those methods can be used to provide 
         \verb|recipients|       & This is a list of \verb|RemoteUser| objects containing the identity and public encryption key for each recipient. This set defines which users can decrypt the created cipher.           \\ \hline
         \multicolumn{2}{|l|}{Output}   \\ \hline
         \multicolumn{2}{|p{13cm}|}{The method returns a \emph{JWE} token encoded as string. It contains the provided signed log and can only be decrypted by the specified recipients. The token specifies the logged-in user as creator of the token. It also contains the set of recipients and the identity of the data owner as metadata.} \\ \hline
-    \end{tabular} \\
-    \item
-    The method \verb|decryptLog| decrypts a given encrypted data.
-    A user can only decrypt this log if it was included as a recipient during encryption.
-    It might be called by any user that received an encrypted log.
-    The method performs multiple validations to detect any misusage of the protocol.
-    In particular, it verifies all signatures of the encoded \emph{JWS} tokens.
-    This function relies on the private decryption key of the logged-in user. \\\\
+    \end{tabular}
+    \caption[Signature of encryptLog]{Input parameters and output of the encryptLog method.}
+\end{table}
+
+The method \verb|decryptLog| decrypts a given encrypted data.
+A user can only decrypt this log if it was included as a recipient during encryption.
+It might be called by any user that received an encrypted log.
+The method performs multiple validations to detect any misusage of the protocol.
+In particular, it verifies all signatures of the encoded \emph{JWS} tokens.
+This function relies on the private decryption key of the logged-in user.
+\begin{table}[ht]
+    \centering
     \begin{tabular}{|p{3cm}p{10cm}|}
         \hline
         \multicolumn{2}{|l|}{Input parameters}    \\ \hline
         \verb|jwe|              & This is a \emph{JWE} token that represents an encrypted log. This token is the result of \verb|encryptLog|. \\ \hline
-         \multicolumn{2}{|l|}{Output}   \\ \hline
+            \multicolumn{2}{|l|}{Output}   \\ \hline
         \multicolumn{2}{|p{13cm}|}{The method returns a log. This is the same object that was passed to the encryption function. Therefore it is still signed by a monitor. The signature, however, was already verified during decryption. This construction allows a data owner to easily re-encrypt the log.} \\ \hline
     \end{tabular}
-\end{enumerate}
+    \caption[Signature of decryptLog]{Input parameters and output of the decryptLog method.}
+\end{table}
+
 \subsection{Cryptographic keys}
 The libraries require cryptographic keys to create, encrypt and decrypt logs.
 As described in section~\ref{sec:overview}, the protocol assumes an externally established PKI.
-The development environment of the toolchain contains a script \verb|prebuild.sh|.
-This script exemplary computes keys that are known to work.
-Currently, the libraries only support elliptic curve cryptography.
-The OpenSSL parameters \verb|prime256v1| are known to work in all three implementations.
-Private keys are assumed to be PEM-encoded.
+Each user is assigned two key pairs (one for signing and one for encrypting data).
+The private keys are assumed to be PEM-encoded.
 Public keys are assumed to be PEM-encoded certificates that are signed by a trusted certificate authority.
-Please have a look to \verb|prebuild.sh| for details.
+Whenever a user is imported, the certificates of the user are assumed to be singed by this certificate authority.
+Currently, the libraries only support elliptic curve cryptography.
+The elliptic curve OpenSSL parameters \verb|prime256v1| are known to work in all three implementations.
 
 \section{Toolchain modifications}
 \label{sec:toolchain-modifications}
@@ -190,16 +200,55 @@ They provide details about the implemented changes.
 \begin{figure}[h!]
     \includegraphics[width=8cm]{../img/06/encrypted_toolchain.jpg}
     \centering
-    \caption{The general data flow in the toolchain has not changed. The passed data, however, is end-to-end encrypted.}
+    \caption[Toolchain encrypted data flow]{The general data flow in the toolchain has not changed. The passed data, however, is end-to-end encrypted.}
     \label{fig:encrypted-toolchain}
 \end{figure}
 
 \subsection{User management}
 The toolchain relies on a single-sign-on server responsible for authenticating users.
-The development environment provides an implementation of this server.
-Besides the user information it now additionally stores certificates containing the public keys of the users.
-An additionally implemented endpoint resolves the identity of the user to its stored keys.
-This allows all other components within the toolchain to fetch the public keys of participating users.
+The development environment provides the \emph{Revolori} server which is an implementation of this service.
+Besides the user information it now additionally stores certificates containing the public keys of the users and the information if a user is an authorized monitor.
+This additional information is used by the frontend to encrypt and decrypt logs.
+Therefore, a new endpoint was introduced which resolves the identity to this information (e.g. the certificates and if the user is a trusted monitor).
+
+The development environment of the toolchain is a proof-of-concept that shows how an external PKI can be connected.
+There are two scripts used in order to load pre-configured users into the development environment.
+Both were updated to establish an exemplary PKI:
+
+\begin{itemize}
+    \item 
+    The script \verb|prebuild.sh| is responsible for creating a key pair for the \emph{Revolori} server.
+    It is used to sign access tokens.
+    The public key is passed to the \emph{Overseer} because it needs to verify if a provided token was singed by the \emph{Revolori} single-sign-on-server.
+    
+    The script was adopted to create a key pair for a exemplary certificate authority.
+    Moreover, the script expects a file \verb|users.json| which contains the pre-configured user data.
+    Two key pairs for each user are generated.
+    The public keys of all users are signed by the public key of the certificate authority.
+    This effectively creates certificates binding the identities of the users to their public keys.
+    Finally the script updates the provided \verb|users.json| to contain the cryptographic keys of each user.
+    \item 
+    The script \verb|setup.sh| is responsible for creating users in a running \emph{Revolori} instance.
+    It is also used to create exemplary data accesses for each user.
+    Thus, the script had to be adopted to support encrypted logs.
+    First of all, the script expects the file \verb|users.json| which contains user information along with their cryptographic keys.
+    It then parses the user information and creates the respective users in the \emph{Revolori} server.
+    In particular, this includes the certificates of the users public keys.
+    To pre-compute encrypted logs the \emph{CLI} of the \emph{ts-it-crypto} library needs to be installed.
+    It allows to encrypt log data in the name of a monitor.
+    The encrypted logs are then uploaded to the \emph{Overseer}.
+
+\end{itemize}
+
+This setup allows to fetch the public keys for a given user from the \emph{Revolori} server.
+The development environment also provides the private keys for a user upon login.
+This is realized by passing the \verb|users.json| file to the \emph{Clotilde} process.
+Please note that this implies that the frontend has unrestricted access to all private keys.
+Thus, this setup can only be used in the development environment.
+In productive systems the \emph{Clotilde} frontend must securely import the private keys from the user (e.g. via hardware token).
+If a user logs in to the system, the frontend instantiates a \verb|ItCrypto| object using the provided key material.
+This finally enables all cryptographic tasks.
+
 
 \subsection{Display component}
 The display component is the front-end of the toolchain.
